[gd_scene load_steps=87 format=3 uid="uid://dnfl7m5gxhq71"]

[ext_resource type="Script" uid="uid://bo54t4ybflsh1" path="res://game/game/Bob/bob.gd" id="1_5xu5e"]
[ext_resource type="Texture2D" uid="uid://c1h8g4iswp62n" path="res://ASSETS/bobALL.png" id="2_ct67a"]
[ext_resource type="PackedScene" uid="uid://d11uab4tmr325" path="res://game/game/damage/target.tscn" id="9_middi"]
[ext_resource type="PackedScene" uid="uid://t1llkwtqjrew" path="res://game/game/z_index_manager.tscn" id="10_q6un5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ct67a"]
atlas = ExtResource("2_ct67a")
region = Rect2(660, 800, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7wnee"]
atlas = ExtResource("2_ct67a")
region = Rect2(825, 800, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_75iyn"]
atlas = ExtResource("2_ct67a")
region = Rect2(990, 800, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2qpk"]
atlas = ExtResource("2_ct67a")
region = Rect2(0, 900, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xu5e"]
atlas = ExtResource("2_ct67a")
region = Rect2(330, 900, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_middi"]
atlas = ExtResource("2_ct67a")
region = Rect2(495, 900, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6un5"]
atlas = ExtResource("2_ct67a")
region = Rect2(660, 900, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8caah"]
atlas = ExtResource("2_ct67a")
region = Rect2(825, 900, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdcjl"]
atlas = ExtResource("2_ct67a")
region = Rect2(0, 1000, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jvte"]
atlas = ExtResource("2_ct67a")
region = Rect2(165, 1000, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_moxng"]
atlas = ExtResource("2_ct67a")
region = Rect2(330, 1000, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5t3tu"]
atlas = ExtResource("2_ct67a")
region = Rect2(495, 1000, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_clejd"]
atlas = ExtResource("2_ct67a")
region = Rect2(825, 1000, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_v71fe"]
atlas = ExtResource("2_ct67a")
region = Rect2(990, 1000, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vc5fd"]
atlas = ExtResource("2_ct67a")
region = Rect2(0, 1100, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ox4jj"]
atlas = ExtResource("2_ct67a")
region = Rect2(165, 1100, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5bqsl"]
atlas = ExtResource("2_ct67a")
region = Rect2(165, 1200, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7hcx"]
atlas = ExtResource("2_ct67a")
region = Rect2(330, 1200, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_uesqv"]
atlas = ExtResource("2_ct67a")
region = Rect2(495, 1200, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fbulh"]
atlas = ExtResource("2_ct67a")
region = Rect2(660, 1200, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8y7lj"]
atlas = ExtResource("2_ct67a")
region = Rect2(495, 1100, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_82ooc"]
atlas = ExtResource("2_ct67a")
region = Rect2(660, 1100, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xoad"]
atlas = ExtResource("2_ct67a")
region = Rect2(825, 1100, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvw0i"]
atlas = ExtResource("2_ct67a")
region = Rect2(990, 1100, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_aarb5"]
atlas = ExtResource("2_ct67a")
region = Rect2(165, 0, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vonu4"]
atlas = ExtResource("2_ct67a")
region = Rect2(330, 0, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8uv7"]
atlas = ExtResource("2_ct67a")
region = Rect2(495, 0, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6s10"]
atlas = ExtResource("2_ct67a")
region = Rect2(660, 0, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vbym1"]
atlas = ExtResource("2_ct67a")
region = Rect2(990, 0, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qcfhv"]
atlas = ExtResource("2_ct67a")
region = Rect2(0, 100, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_utsup"]
atlas = ExtResource("2_ct67a")
region = Rect2(165, 100, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_lssyg"]
atlas = ExtResource("2_ct67a")
region = Rect2(330, 100, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvh6g"]
atlas = ExtResource("2_ct67a")
region = Rect2(495, 100, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6bca"]
atlas = ExtResource("2_ct67a")
region = Rect2(660, 100, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_sb2mm"]
atlas = ExtResource("2_ct67a")
region = Rect2(330, 300, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ss4d"]
atlas = ExtResource("2_ct67a")
region = Rect2(495, 300, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkm5r"]
atlas = ExtResource("2_ct67a")
region = Rect2(660, 300, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xkrm"]
atlas = ExtResource("2_ct67a")
region = Rect2(825, 300, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrb11"]
atlas = ExtResource("2_ct67a")
region = Rect2(990, 300, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8n0u"]
atlas = ExtResource("2_ct67a")
region = Rect2(0, 400, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3l4jx"]
atlas = ExtResource("2_ct67a")
region = Rect2(165, 400, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kekxx"]
atlas = ExtResource("2_ct67a")
region = Rect2(330, 400, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_f37uh"]
atlas = ExtResource("2_ct67a")
region = Rect2(660, 400, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_cbm3e"]
atlas = ExtResource("2_ct67a")
region = Rect2(825, 400, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6w3v"]
atlas = ExtResource("2_ct67a")
region = Rect2(990, 400, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6p4g"]
atlas = ExtResource("2_ct67a")
region = Rect2(0, 500, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1arm"]
atlas = ExtResource("2_ct67a")
region = Rect2(165, 500, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ctup"]
atlas = ExtResource("2_ct67a")
region = Rect2(330, 500, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsofr"]
atlas = ExtResource("2_ct67a")
region = Rect2(495, 500, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_y48do"]
atlas = ExtResource("2_ct67a")
region = Rect2(660, 500, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5ilm"]
atlas = ExtResource("2_ct67a")
region = Rect2(990, 500, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7orfx"]
atlas = ExtResource("2_ct67a")
region = Rect2(0, 600, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xnecd"]
atlas = ExtResource("2_ct67a")
region = Rect2(165, 600, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqixk"]
atlas = ExtResource("2_ct67a")
region = Rect2(330, 600, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_uionm"]
atlas = ExtResource("2_ct67a")
region = Rect2(495, 600, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8t58"]
atlas = ExtResource("2_ct67a")
region = Rect2(660, 600, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dt50"]
atlas = ExtResource("2_ct67a")
region = Rect2(825, 600, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5e6bp"]
atlas = ExtResource("2_ct67a")
region = Rect2(990, 600, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_exakq"]
atlas = ExtResource("2_ct67a")
region = Rect2(0, 700, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tj2ay"]
atlas = ExtResource("2_ct67a")
region = Rect2(165, 700, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5uhka"]
atlas = ExtResource("2_ct67a")
region = Rect2(330, 700, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuiqj"]
atlas = ExtResource("2_ct67a")
region = Rect2(495, 700, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wwsdt"]
atlas = ExtResource("2_ct67a")
region = Rect2(660, 700, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5nbd"]
atlas = ExtResource("2_ct67a")
region = Rect2(825, 700, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_davfs"]
atlas = ExtResource("2_ct67a")
region = Rect2(990, 700, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7logw"]
atlas = ExtResource("2_ct67a")
region = Rect2(0, 800, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhonl"]
atlas = ExtResource("2_ct67a")
region = Rect2(165, 800, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6db5"]
atlas = ExtResource("2_ct67a")
region = Rect2(330, 800, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_peeys"]
atlas = ExtResource("2_ct67a")
region = Rect2(990, 100, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mkg78"]
atlas = ExtResource("2_ct67a")
region = Rect2(0, 200, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnfy6"]
atlas = ExtResource("2_ct67a")
region = Rect2(165, 200, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4sr7"]
atlas = ExtResource("2_ct67a")
region = Rect2(330, 200, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_83bsj"]
atlas = ExtResource("2_ct67a")
region = Rect2(660, 200, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqal3"]
atlas = ExtResource("2_ct67a")
region = Rect2(825, 200, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_t24ha"]
atlas = ExtResource("2_ct67a")
region = Rect2(990, 200, 165, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_np0uq"]
atlas = ExtResource("2_ct67a")
region = Rect2(0, 300, 165, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_ifr8f"]
animations = [{
"frames": [],
"loop": true,
"name": &"appear&disappear",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"full_swing (not for use)",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ct67a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wnee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75iyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2qpk")
}],
"loop": true,
"name": &"gun_appear",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xu5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_middi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6un5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8caah")
}],
"loop": true,
"name": &"gun_disappear",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdcjl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jvte")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_moxng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5t3tu")
}],
"loop": true,
"name": &"gun_raise",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_clejd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v71fe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vc5fd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ox4jj")
}],
"loop": true,
"name": &"gun_shoot",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5bqsl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7hcx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uesqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fbulh")
}],
"loop": true,
"name": &"heal",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8y7lj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82ooc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xoad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvw0i")
}],
"loop": true,
"name": &"hurt",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aarb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vonu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8uv7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6s10")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbym1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qcfhv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utsup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lssyg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvh6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6bca")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sb2mm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ss4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkm5r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xkrm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrb11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8n0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3l4jx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kekxx")
}],
"loop": true,
"name": &"sword1",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f37uh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cbm3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6w3v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6p4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1arm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ctup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsofr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y48do")
}],
"loop": true,
"name": &"sword2",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5ilm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7orfx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xnecd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqixk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uionm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8t58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dt50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5e6bp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exakq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tj2ay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uhka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuiqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwsdt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5nbd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_davfs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7logw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhonl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6db5")
}],
"loop": true,
"name": &"sword3",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_peeys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mkg78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnfy6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4sr7")
}],
"loop": true,
"name": &"sword_appear",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_83bsj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqal3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t24ha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_np0uq")
}],
"loop": true,
"name": &"sword_disappear",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_23x7o"]
size = Vector2(26, 42)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_w2qpk"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath("Anim:animation")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath("Anim:flip_h")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath("Target:health")
properties/3/spawn = true
properties/3/replication_mode = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q6un5"]
size = Vector2(166.25, 66)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o2608"]
size = Vector2(154, 63)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i8iub"]
size = Vector2(141, 106)

[node name="Bob" type="CharacterBody2D"]
script = ExtResource("1_5xu5e")

[node name="Anim" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -25)
sprite_frames = SubResource("SpriteFrames_ifr8f")
animation = &"sword3"
autoplay = "idle"
frame_progress = 0.598791

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
position = Vector2(-9, 4)
shape = SubResource("RectangleShape2D_23x7o")

[node name="Target" parent="." instance=ExtResource("9_middi")]
affiliation = 0

[node name="ZIndexManager" parent="." instance=ExtResource("10_q6un5")]

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_w2qpk")

[node name="BobAttackArea" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="BobAttackArea"]
position = Vector2(-2.125, -8)
shape = SubResource("RectangleShape2D_q6un5")

[node name="BobAttackCooldown" type="Timer" parent="."]
unique_name_in_owner = true

[node name="BobWinddown" type="Timer" parent="."]
one_shot = true

[node name="BobAttackArea2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BobAttackArea2"]
position = Vector2(-1, 4.5)
shape = SubResource("RectangleShape2D_o2608")

[node name="BobAttackArea3" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BobAttackArea3"]
position = Vector2(-3.5, -22)
shape = SubResource("RectangleShape2D_i8iub")

[connection signal="onDamage" from="Target" to="." method="_on_target_on_damage"]
[connection signal="onDeath" from="Target" to="." method="_on_target_on_death"]
[connection signal="timeout" from="BobAttackCooldown" to="." method="_on_bob_attack_cooldown_timeout"]
[connection signal="timeout" from="BobWinddown" to="." method="_on_bob_winddown_timeout"]
